Запросы изменены на preparestatement. Написан тест для UserStore. Заработало, но с ошибками.